--- a/about.css
+++ b/about.css
@@ -4,7 +4,7 @@ body{
 .main{
     width: 100%;
     height: 100%;
-    background-color: #1f2530;;
+    background-color: #1f2530;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 @media  screen and (min-width: 1000px) {
