--- a/projects.css
+++ b/projects.css
@@ -107,7 +107,7 @@ li:hover:after{
     display: flex;
     flex-wrap: wrap;
     padding: 1em;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 header h1,p{
     font-family: Fira Code;
