--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ li:hover:after{
 }
 .sec1 h1{
     color: wheat;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:Fira Code;
 }
 .sec1 h2{
     color: #cdcfd4;
@@ -108,7 +108,7 @@ li:hover:after{
     flex-direction: row;
     flex-wrap: wrap;
     padding: 1em;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 .Skills h2{
     font-family: Fira Code;
@@ -228,6 +228,7 @@ footer{
 .card{
     border: 1px solid rgb(122, 117, 117);
     margin: 0.5px;
+    margin-bottom: 2em;
 }
 .card_skill{
     padding-left: 1em;
@@ -246,5 +247,5 @@ a{
 .skilcon{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
 }
